analyse_data27crit

--- a/tp_sdp_christophe_simon_nathan.ipynb
+++ b/tp_sdp_christophe_simon_nathan.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "cf60fc48",
    "metadata": {},
    "outputs": [],
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "id": "0a5e29a9",
    "metadata": {},
    "outputs": [
@@ -31,11 +31,8 @@
       "Pros: ['A', 'D', 'E']\n",
       "Cons: ['C', 'F', 'G']\n",
       "Nombre de paires valides identifiées : 6\n",
-      "Set parameter Username\n",
-      "Set parameter LicenseID to value 2755283\n",
-      "Academic license - for non-commercial use only - expires 2026-12-15\n",
       "\n",
-      "Solution Optimale Trouvée (Explication Valide) :\n",
+      "Solution Trouvée (Explication Valide) :\n",
       " - Trade-off (A,C)\n",
       " - Trade-off (D,F)\n",
       " - Trade-off (E,G)\n"
@@ -78,16 +75,21 @@
     "\n",
     "# Ajout des contraintes\n",
     "\n",
-    "# Contrainte 1 : Tout élément de Cons doit être couvert exactement une fois\n",
-    "# Somme(c_pq) = 1 pour chaque q dans Cons\n",
+    "# 1. Tout critère 'Cons' doit être couvert exactement une fois par un 'Pros' valide\n",
     "for q in cons:\n",
-    "    # On utilise quicksum pour sommer efficacement les variables Gurobi concernées\n",
-    "    m.addConstr(quicksum(c[(p, q)] for p in pros if (p, q) in valid_pairs) == 1, name=f\"Cover_{q}\")\n",
+    "    # On somme uniquement sur les p tels que la paire (p,q) existe dans valid_pairs\n",
+    "    m.addConstr(\n",
+    "        quicksum(c[(p, q)] for p in pros if (p, q) in valid_pairs) == 1,\n",
+    "        name=f\"Cover_Con_{q}\"\n",
+    "    )\n",
     "\n",
-    "# Contrainte 2 : Tout élément de Pros est utilisé au maximum une fois\n",
-    "# Les trade-offs doivent être disjoints\n",
+    "# 2. Chaque critère 'Pros' ne peut être utilisé qu'une seule fois au maximum\n",
     "for p in pros:\n",
-    "    m.addConstr(quicksum(c[(p, q)] for q in cons if (p, q) in valid_pairs) <= 1, name=f\"Unique_{p}\")\n",
+    "    # On somme uniquement sur les q tels que la paire (p,q) existe dans valid_pairs\n",
+    "    m.addConstr(\n",
+    "        quicksum(c[(p, q)] for q in cons if (p, q) in valid_pairs) <= 1,\n",
+    "        name=f\"Use_Pro_Once_{p}\"\n",
+    "    )\n",
     "\n",
     "# Fonction Objectif\n",
     "# Ici on cherche juste la faisabilité, on peut minimiser 0\n",
@@ -101,7 +103,7 @@
     "\n",
     "# --- 4. Analyse des résultats ---\n",
     "if m.status == GRB.OPTIMAL:\n",
-    "    print(\"\\nSolution Optimale Trouvée (Explication Valide) :\")\n",
+    "    print(\"\\nSolution Trouvée (Explication Valide) :\")\n",
     "    explanation = []\n",
     "    for p, q in valid_pairs:\n",
     "        # On vérifie si la variable est à 1 (avec une petite tolérance pour les flottants)\n",
@@ -109,10 +111,6 @@
     "            explanation.append((p,q))\n",
     "            net_val = data[p] + data[q]\n",
     "            print(f\" - Trade-off ({p},{q})\")\n",
-    "    \n",
-    "    # Vérification\n",
-    "    expected = {('A', 'C'), ('D', 'F'), ('E', 'G')}\n",
-    "    is_same = set(explanation) == expected\n",
     "\n",
     "elif m.status == GRB.INFEASIBLE:\n",
     "    print(\"\\nModèle Infeasible : Il n'existe pas d'explication de type (1-1).\")\n",
@@ -148,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "id": "42e3dfd9",
    "metadata": {},
    "outputs": [
@@ -195,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 22,
    "id": "3f3234bf",
    "metadata": {},
    "outputs": [
@@ -203,24 +201,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Comparaison x > y\n",
-      "Arguments Pour (Pros) : ['A', 'D', 'E']\n",
-      "Arguments Contre (Cons) : ['C', 'F', 'G']\n",
-      "Deltas : {'A': 32, 'B': 0, 'C': -28, 'D': 36, 'E': 48, 'F': -35, 'G': -42}\n",
+      "Comparaison w > w'\n",
+      "Arguments Pour (Pros) : ['A', 'G']\n",
+      "Arguments Contre (Cons) : ['B', 'C', 'E', 'F']\n",
+      "Deltas : {'A': 176, 'B': -49, 'C': -21, 'D': 0, 'E': -90, 'F': -10, 'G': 12}\n",
       "------------------------------\n",
       "Résultat : Une explication de type (1-m) existe !\n",
       "\n",
-      "Argument Contre C (-28) compensé par :\n",
-      "  -> Pros : ['A'] (Cumul Pros: +32)\n",
-      "  -> Bilan net : +4\n",
-      "\n",
-      "Argument Contre F (-35) compensé par :\n",
-      "  -> Pros : ['D'] (Cumul Pros: +36)\n",
-      "  -> Bilan net : +1\n",
-      "\n",
-      "Argument Contre G (-42) compensé par :\n",
-      "  -> Pros : ['E'] (Cumul Pros: +48)\n",
-      "  -> Bilan net : +6\n",
+      "Argument Pour 'A' (176) couvre :\n",
+      "  -> Cons : ['B', 'C', 'E', 'F'] (Cumul Cons: -170)\n",
+      "  -> Bilan : +6\n",
       "\n"
      ]
     }
@@ -231,11 +221,6 @@
     "    # DONNÉES (Comparaison u > v)\n",
     "    notes_1 = get_notes(candidat_1)\n",
     "    notes_2 = get_notes(candidat_2)\n",
-    "\n",
-    "    # Calcul des contributions (deltas)\n",
-    "    deltas = {}\n",
-    "    for k in weights:\n",
-    "        deltas[k] = weights[k] * (notes_1[k] - notes_2[k])\n",
     "\n",
     "    # Calcul des contributions (deltas)\n",
     "    deltas = {}\n",
@@ -253,7 +238,7 @@
     "    # MODÉLISATION GUROBI\n",
     "    m = Model(\"Explication_1_m\")\n",
     "\n",
-    "    # Variables de décision UNIQUEMENT x\n",
+    "    # Variables de décision\n",
     "    # x[p, c] = 1 si l'argument Pro 'p' couvre l'argument Con 'c'\n",
     "    x = m.addVars(pros, cons, vtype=GRB.BINARY, name=\"x\")\n",
     "\n",
@@ -269,14 +254,13 @@
     "    # Formule : Delta_p + Somme(Delta_c * x_pc) >= epsilon\n",
     "    # Si p est utilisé, cela vérifie que le trade-off est positif.\n",
     "    # Si p est INUTILISÉ (x_pc = 0 partout), cela devient Delta_p >= epsilon, ce qui est toujours VRAI.\n",
-    "    epsilon = 0.001 \n",
+    "    epsilon = 0.001\n",
     "\n",
     "    for p in pros:\n",
-    "        # Note: deltas[c] est négatif ici\n",
     "        m.addConstr(deltas[p] + quicksum(deltas[c] * x[p, c] for c in cons) >= epsilon, name=f\"Valid_{p}\")\n",
     "\n",
     "    # RÉSOLUTION\n",
-    "    m.params.outputflag = 0  \n",
+    "    m.params.outputflag = 0\n",
     "    m.optimize()\n",
     "\n",
     "    # ANALYSE\n",
@@ -284,23 +268,24 @@
     "    if m.status == GRB.OPTIMAL:\n",
     "        print(\"Résultat : Une explication de type (1-m) existe !\\n\")\n",
     "        \n",
-    "        # Pour chaque Con, on affiche les Pros qui le couvrent\n",
-    "        for c in cons:\n",
-    "            assigned_pros = [p for p in pros if x[p, c].x > 0.5]\n",
+    "        # Pour chaque Pro, on affiche les Cons qu'il couvre (logique 1-m)\n",
+    "        for p in pros:\n",
+    "            covered_cons = [c for c in cons if x[p, c].x > 0.5]\n",
     "            \n",
-    "            sum_pros = sum(deltas[p] for p in assigned_pros)\n",
-    "            net_value = deltas[c] + sum_pros\n",
-    "            \n",
-    "            print(f\"Argument Contre {c} ({deltas[c]}) compensé par :\")\n",
-    "            print(f\"  -> Pros : {assigned_pros} (Cumul Pros: +{sum_pros})\")\n",
-    "            print(f\"  -> Bilan net : +{net_value}\")\n",
-    "            print(\"\")\n",
+    "            if covered_cons:  # Si ce Pro couvre au moins un Con\n",
+    "                sum_cons = sum(deltas[c] for c in covered_cons)\n",
+    "                net_value = deltas[p] + sum_cons\n",
+    "                \n",
+    "                print(f\"Argument Pour '{p}' ({deltas[p]}) couvre :\")\n",
+    "                print(f\"  -> Cons : {covered_cons} (Cumul Cons: {sum_cons})\")\n",
+    "                print(f\"  -> Bilan : +{net_value}\")\n",
+    "                print(\"\")\n",
     "\n",
     "    elif m.status == GRB.INFEASIBLE:\n",
     "        print(\"Résultat : INFEASIBLE (Certificat de non-existence).\")\n",
     "\n",
     "\n",
-    "compare_1_m(\"x\", \"y\")"
+    "compare_1_m(\"w\", \"w'\")"
    ]
   },
   {
@@ -333,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 23,
    "id": "143e87e1",
    "metadata": {},
    "outputs": [
@@ -359,18 +344,12 @@
    "id": "ebe5b1b6",
    "metadata": {},
    "source": [
-    "## Explication type (m-1)\n",
-    "\n",
-    "On cherche ici à expliquer la préférence $x \\succ y$ à l'aide de trade-offs de type (m-1).\n",
-    "Un trade-off de type (m-1) est constitué d'un seul argument *Con* $c$ et d'un ensemble d'arguments *Pros* $\\mathcal{P}'$ qui le compensent, c'est-à-dire :\n",
-    "$$ \\delta_c + \\sum_{p \\in \\mathcal{P}'} \\delta_p > 0 $$\n",
-    "\n",
-    "L'explication doit couvrir tous les arguments *Cons* de manière disjointe (chaque *Pro* ne sert qu'une fois)."
+    "## Explication type (m-1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "id": "6d8a9dee",
    "metadata": {},
    "outputs": [
@@ -378,24 +357,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Comparaison x > y\n",
-      "Arguments Pour (Pros) : ['A', 'D', 'E']\n",
-      "Arguments Contre (Cons) : ['C', 'F', 'G']\n",
-      "Deltas : {'A': 32, 'B': 0, 'C': -28, 'D': 36, 'E': 48, 'F': -35, 'G': -42}\n",
+      "Comparaison x > u\n",
+      "Arguments Pour (Pros) : ['A', 'B', 'C', 'F']\n",
+      "Arguments Contre (Cons) : ['D', 'E', 'G']\n",
+      "Deltas : {'A': 104, 'B': 42, 'C': 35, 'D': -96, 'E': -78, 'F': 75, 'G': -30}\n",
       "------------------------------\n",
       "Résultat : Une explication de type (m-1) existe !\n",
       "\n",
-      "Argument Contre C (-28) compensé par :\n",
-      "  -> Pros : ['A'] (Cumul Pros: +32)\n",
-      "  -> Bilan net : +4\n",
+      "Argument Contre D (-96) compensé par :\n",
+      "  -> Pros : ['B', 'F'] (Cumul Pros: +117)\n",
+      "  -> Bilan : +21\n",
       "\n",
-      "Argument Contre F (-35) compensé par :\n",
-      "  -> Pros : ['D'] (Cumul Pros: +36)\n",
-      "  -> Bilan net : +1\n",
+      "Argument Contre E (-78) compensé par :\n",
+      "  -> Pros : ['A'] (Cumul Pros: +104)\n",
+      "  -> Bilan : +26\n",
       "\n",
-      "Argument Contre G (-42) compensé par :\n",
-      "  -> Pros : ['E'] (Cumul Pros: +48)\n",
-      "  -> Bilan net : +6\n",
+      "Argument Contre G (-30) compensé par :\n",
+      "  -> Pros : ['C'] (Cumul Pros: +35)\n",
+      "  -> Bilan : +5\n",
       "\n"
      ]
     }
@@ -431,7 +410,7 @@
     "\n",
     "    # CONTRAINTES\n",
     "\n",
-    "    # 1. Disjonction des Pros : Chaque Pro peut être utilisé au plus une fois\n",
+    "    # 1. Chaque Pro peut être utilisé au plus une fois\n",
     "    for p in pros:\n",
     "        m.addConstr(quicksum(x[p, c] for c in cons) <= 1, name=f\"Unique_{p}\")\n",
     "\n",
@@ -440,7 +419,6 @@
     "    epsilon = 0.001\n",
     "\n",
     "    for c in cons:\n",
-    "        # Note: deltas[c] est négatif\n",
     "        m.addConstr(deltas[c] + quicksum(deltas[p] * x[p, c] for p in pros) >= epsilon, name=f\"Valid_Group_for_{c}\")\n",
     "\n",
     "    # Fonction Objectif : Ici on cherche juste la faisabilité (Objectif constant)\n",
@@ -464,14 +442,14 @@
     "            \n",
     "            print(f\"Argument Contre {c} ({deltas[c]}) compensé par :\")\n",
     "            print(f\"  -> Pros : {assigned_pros} (Cumul Pros: +{sum_pros})\")\n",
-    "            print(f\"  -> Bilan net : +{net_value}\")\n",
+    "            print(f\"  -> Bilan : +{net_value}\")\n",
     "            print(\"\")\n",
     "\n",
     "    elif m.status == GRB.INFEASIBLE:\n",
     "        print(\"Résultat : INFEASIBLE (Pas d'explication de type (m-1)).\")\n",
     "\n",
     "\n",
-    "compare_m_1(\"x\", \"y\")\n"
+    "compare_m_1(\"x\", \"u\")\n"
    ]
   },
   {
@@ -501,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 32,
    "id": "d068f449",
    "metadata": {},
    "outputs": [
@@ -534,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 33,
    "id": "453452df",
    "metadata": {},
    "outputs": [
@@ -659,7 +637,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 34,
    "id": "26bc4ec8",
    "metadata": {},
    "outputs": [
