--- a/analyse_data27crit.ipynb
+++ b/analyse_data27crit.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2026-01-27T21:07:41.807987Z",
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2026-01-27T21:07:42.954967Z",
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2026-01-27T21:07:43.341923Z",
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2026-01-27T21:07:43.351085Z",
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2026-01-27T21:07:43.369650Z",
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2026-01-27T21:07:43.382941Z",
@@ -318,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2026-01-27T21:07:43.394050Z",
@@ -422,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 13,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2026-01-27T21:07:43.408428Z",
@@ -447,13 +447,6 @@
     "    print(f\"   Nombre de Pros : {len(pros)}\")\n",
     "    print(f\"   Nombre de Cons : {len(cons)}\")\n",
     "    print(f\"   Critères neutres : {len([k for k, v in deltas.items() if v == 0])}\")\n",
-    "    \n",
-    "    # Afficher top Pros et top Cons\n",
-    "    sorted_pros = sorted([(p, deltas[p]) for p in pros], key=lambda x: -x[1])\n",
-    "    sorted_cons = sorted([(c, deltas[c]) for c in cons], key=lambda x: x[1])\n",
-    "    \n",
-    "    print(f\"\\n   Top 5 Pros : {sorted_pros[:5]}\")\n",
-    "    print(f\"   Top 5 Cons (pires) : {sorted_cons[:5]}\")\n",
     "    \n",
     "    results = {}\n",
     "    \n",
@@ -493,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 9,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2026-01-27T21:07:43.419480Z",
@@ -527,6 +520,9 @@
       "Arguments Pour (Pros) : 13 critères\n",
       "Arguments Contre (Cons) : 14 critères\n",
       "Paires (1-1) valides : 128\n",
+      "Set parameter Username\n",
+      "Set parameter LicenseID to value 2755283\n",
+      "Academic license - for non-commercial use only - expires 2026-12-15\n",
       "\n",
       "Explication (1-1) INFAISABLE.\n",
       "\n",
@@ -596,7 +592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 10,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2026-01-27T21:07:43.499842Z",
@@ -701,7 +697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 11,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2026-01-27T21:07:43.530914Z",
@@ -790,7 +786,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 12,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2026-01-27T21:07:43.580762Z",
