--- a/tp_sdp_christophe_simon_nathan.ipynb
+++ b/tp_sdp_christophe_simon_nathan.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "0a5e29a9",
    "metadata": {},
    "outputs": [
@@ -30,7 +30,11 @@
      "text": [
       "Pros: ['A', 'D', 'E']\n",
       "Cons: ['C', 'F', 'G']\n",
+      "Paires valides:  [('A', 'C'), ('D', 'C'), ('D', 'F'), ('E', 'C'), ('E', 'F'), ('E', 'G')]\n",
       "Nombre de paires valides identifiées : 6\n",
+      "Set parameter Username\n",
+      "Set parameter LicenseID to value 2755283\n",
+      "Academic license - for non-commercial use only - expires 2026-12-15\n",
       "\n",
       "Solution Trouvée (Explication Valide) :\n",
       " - Trade-off (A,C)\n",
@@ -56,6 +60,8 @@
     "    for q in cons:\n",
     "        if data[p] + data[q] > 0:\n",
     "            valid_pairs.append((p, q))\n",
+    "\n",
+    "print(\"Paires valides: \", valid_pairs)\n",
     "\n",
     "print(f\"Nombre de paires valides identifiées : {len(valid_pairs)}\")\n",
     "\n",
@@ -125,15 +131,12 @@
     "### Justification de la Modélisation (1-1)\n",
     "\n",
     "**Variables de décision :**\n",
-    "*   $c_{pq} \\in \\{0, 1\\}$ : Variable binaire qui vaut 1 si le critère $p \\in Pros$ compense le critère $q \\in Cons$, 0 sinon.\n",
+    "*   $c_{pq} \\in \\{0, 1\\}$ : Variable binaire qui vaut 1 si la paire est choisie, 0 sinon.\n",
     "*   Nous ne considérons que les paires \"valides\" où la somme des contributions est positive ($\\delta_p + \\delta_q > 0$) afin de réduire la taille du problème.\n",
     "\n",
     "**Contraintes :**\n",
     "1.  **Couverture complète des Cons :** $\\sum_{p \\in Pros} c_{pq} = 1, \\forall q \\in Cons$. Chaque désavantage doit être compensé exactement une fois.\n",
-    "2.  **Utilisation unique des Pros :** $\\sum_{q \\in Cons} c_{pq} \\le 1, \\forall p \\in Pros$. Chaque avantage ne peut servir à compenser qu'un seul désavantage.\n",
-    "\n",
-    "**Validité :**\n",
-    "*   La condition de validité ($\\delta_p + \\delta_q > 0$) est assurée par le pré-filtrage des variables $c_{pq}$ lors de leur création. Si une paire n'est pas valide, la variable n'existe simplement pas dans le modèle."
+    "2.  **Utilisation unique des Pros :** $\\sum_{q \\in Cons} c_{pq} \\le 1, \\forall p \\in Pros$. Chaque avantage ne peut servir à compenser qu'un seul désavantage."
    ]
   },
   {
@@ -146,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "id": "42e3dfd9",
    "metadata": {},
    "outputs": [
@@ -193,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
    "id": "3f3234bf",
    "metadata": {},
    "outputs": [
@@ -318,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 7,
    "id": "143e87e1",
    "metadata": {},
    "outputs": [
@@ -349,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 8,
    "id": "6d8a9dee",
    "metadata": {},
    "outputs": [
@@ -479,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 9,
    "id": "d068f449",
    "metadata": {},
    "outputs": [
@@ -512,7 +515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 10,
    "id": "453452df",
    "metadata": {},
    "outputs": [
@@ -637,7 +640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 11,
    "id": "26bc4ec8",
    "metadata": {},
    "outputs": [
@@ -697,6 +700,259 @@
     "    *   Le terme \"Joker\" devient $M(1-0) = M$ (ex: 1000).\n",
     "    *   La contrainte devient $\\text{Bilan} \\ge \\epsilon - 1000$ (ex: $\\ge -999.999$).\n",
     "    *   Comme le \"Bilan\" (somme des notes) ne descendra jamais aussi bas, cette contrainte est mathématiquement **TOUJOURS VRAIE**. Elle ne contraint plus rien. $\\rightarrow$ **La règle est DÉSACTIVÉE, le solveur est libre.**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c18c1e65",
+   "metadata": {},
+   "source": [
+    "## Pour aller plus loin : trades-off (m-m)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "57dccb1c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def compare_m_m(candidat_1, candidat_2, notes_1=None, notes_2=None, max_groups=None):\n",
+    "    \"\"\"\n",
+    "    Explication de type (m-m) : partition en groupes où chaque groupe\n",
+    "    contient plusieurs Pros compensant plusieurs Cons.\n",
+    "    \n",
+    "    max_groups : nombre maximum de groupes autorisés (None = pas de limite)\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    # DONNÉES\n",
+    "    if notes_1 is None:\n",
+    "        notes_1 = get_notes(candidat_1)\n",
+    "    if notes_2 is None:\n",
+    "        notes_2 = get_notes(candidat_2)\n",
+    "    \n",
+    "    # Calcul des contributions (deltas)\n",
+    "    deltas = {}\n",
+    "    for k in weights:\n",
+    "        deltas[k] = weights[k] * (notes_1[k] - notes_2[k])\n",
+    "    \n",
+    "    pros = [k for k, v in deltas.items() if v > 0]\n",
+    "    cons = [k for k, v in deltas.items() if v < 0]\n",
+    "    \n",
+    "    print(f\"Comparaison {candidat_1} > {candidat_2}\")\n",
+    "    print(f\"Arguments Pour (Pros) : {pros}\")\n",
+    "    print(f\"Arguments Contre (Cons) : {cons}\")\n",
+    "    print(f\"Deltas : {deltas}\")\n",
+    "    \n",
+    "    if len(cons) == 0:\n",
+    "        print(\"-\" * 30)\n",
+    "        print(\"Aucun argument contre ! Dominance triviale.\")\n",
+    "        return\n",
+    "    \n",
+    "    if len(pros) == 0:\n",
+    "        print(\"-\" * 30)\n",
+    "        print(\"Aucun argument pour - Explication impossible.\")\n",
+    "        return\n",
+    "    \n",
+    "    # Nombre de groupes = nombre de Cons (chaque Con doit être dans un groupe)\n",
+    "    if max_groups is None:\n",
+    "        max_groups = len(cons)\n",
+    "    \n",
+    "    K = range(max_groups)  # Indices des groupes\n",
+    "    \n",
+    "    # MODÉLISATION GUROBI\n",
+    "    m = Model(\"Explication_m_m\")\n",
+    "    \n",
+    "    # Variables de décision\n",
+    "    # y[k] = 1 si le groupe k est utilisé\n",
+    "    y = m.addVars(K, vtype=GRB.BINARY, name=\"y\")\n",
+    "    \n",
+    "    # x_pros[p, k] = 1 si le Pro p est assigné au groupe k\n",
+    "    x_pros = m.addVars(pros, K, vtype=GRB.BINARY, name=\"x_pros\")\n",
+    "    \n",
+    "    # x_cons[c, k] = 1 si le Con c est assigné au groupe k\n",
+    "    x_cons = m.addVars(cons, K, vtype=GRB.BINARY, name=\"x_cons\")\n",
+    "    \n",
+    "    m.update()\n",
+    "    \n",
+    "    # CONTRAINTES\n",
+    "    \n",
+    "    # 1. Chaque Con doit être assigné à exactement un groupe\n",
+    "    for c in cons:\n",
+    "        m.addConstr(quicksum(x_cons[c, k] for k in K) == 1, name=f\"AssignCon_{c}\")\n",
+    "    \n",
+    "    # 2. Chaque Pro peut être assigné à au plus un groupe\n",
+    "    for p in pros:\n",
+    "        m.addConstr(quicksum(x_pros[p, k] for k in K) <= 1, name=f\"AssignPro_{p}\")\n",
+    "    \n",
+    "    # 3. Consistance : un élément ne peut être dans un groupe que si le groupe est actif\n",
+    "    for k in K:\n",
+    "        for p in pros:\n",
+    "            m.addConstr(x_pros[p, k] <= y[k], name=f\"Consist_Pro_{p}_{k}\")\n",
+    "        for c in cons:\n",
+    "            m.addConstr(x_cons[c, k] <= y[k], name=f\"Consist_Con_{c}_{k}\")\n",
+    "    \n",
+    "    # 4. Validité des trade-offs (m-m) : bilan de chaque groupe > 0\n",
+    "    epsilon = 0.001\n",
+    "    BigM = 10000\n",
+    "    \n",
+    "    for k in K:\n",
+    "        # Somme des Pros + Somme des Cons >= epsilon (si groupe actif)\n",
+    "        bilan_groupe = (\n",
+    "            quicksum(deltas[p] * x_pros[p, k] for p in pros) +\n",
+    "            quicksum(deltas[c] * x_cons[c, k] for c in cons)\n",
+    "        )\n",
+    "        m.addConstr(bilan_groupe >= epsilon - BigM * (1 - y[k]), name=f\"Valid_Group_{k}\")\n",
+    "    \n",
+    "    # 5. Un groupe actif doit contenir au moins un Con\n",
+    "    for k in K:\n",
+    "        m.addConstr(quicksum(x_cons[c, k] for c in cons) >= y[k], name=f\"NonEmpty_{k}\")\n",
+    "    \n",
+    "    # OBJECTIF : Minimiser le nombre de groupes\n",
+    "    m.setObjective(quicksum(y[k] for k in K), GRB.MINIMIZE)\n",
+    "    m.params.outputflag = 0\n",
+    "    m.optimize()\n",
+    "    \n",
+    "    # RÉSULTATS\n",
+    "    print(\"-\" * 30)\n",
+    "    if m.status == GRB.OPTIMAL:\n",
+    "        nb_groups = int(sum(y[k].x for k in K))\n",
+    "        print(f\"Explication (m-m) trouvée avec {nb_groups} groupe(s) !\\n\")\n",
+    "        \n",
+    "        for k in K:\n",
+    "            if y[k].x > 0.5:\n",
+    "                group_pros = [p for p in pros if x_pros[p, k].x > 0.5]\n",
+    "                group_cons = [c for c in cons if x_cons[c, k].x > 0.5]\n",
+    "                \n",
+    "                sum_pros = sum(deltas[p] for p in group_pros)\n",
+    "                sum_cons = sum(deltas[c] for c in group_cons)\n",
+    "                bilan = sum_pros + sum_cons\n",
+    "                \n",
+    "                print(f\"[Groupe {k+1}]\")\n",
+    "                print(f\"  Pros : {group_pros} (Somme: +{sum_pros})\")\n",
+    "                print(f\"  Cons : {group_cons} (Somme: {sum_cons})\")\n",
+    "                print(f\"  Bilan : +{bilan:.2f}\")\n",
+    "                print()\n",
+    "                \n",
+    "    elif m.status == GRB.INFEASIBLE:\n",
+    "        print(\"INFEASIBLE. Pas d'explication (m-m) possible.\")\n",
+    "        print(\"Cela signifie qu'aucune partition valide n'existe.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ea422e0a",
+   "metadata": {},
+   "source": [
+    "## Justification de la modélisation (m-m)\n",
+    "\n",
+    "**Variables de décision :**\n",
+    "- $y_k \\in \\{0,1\\}$ : Vaut 1 si le groupe $k$ est utilisé.\n",
+    "- $x^{pros}_{pk} \\in \\{0,1\\}$ : Vaut 1 si le *Pro* $p$ est assigné au groupe $k$.\n",
+    "- $x^{cons}_{ck} \\in \\{0,1\\}$ : Vaut 1 si le *Con* $c$ est assigné au groupe $k$.\n",
+    "\n",
+    "**Contraintes :**\n",
+    "1. **Partition des Cons :** $\\sum_{k} x^{cons}_{ck} = 1, \\forall c$  \n",
+    "   Chaque *Con* appartient à exactement un groupe.\n",
+    "\n",
+    "2. **Utilisation unique des Pros :** $\\sum_{k} x^{pros}_{pk} \\le 1, \\forall p$  \n",
+    "   Chaque *Pro* appartient à au plus un groupe.\n",
+    "\n",
+    "3. **Consistance :** $x^{pros}_{pk} \\le y_k$ et $x^{cons}_{ck} \\le y_k$  \n",
+    "   Un élément ne peut être dans un groupe que si ce groupe est actif.\n",
+    "\n",
+    "4. **Validité (m-m) avec Big-M :**\n",
+    "   $$\\sum_{p} \\delta_p \\cdot x^{pros}_{pk} + \\sum_{c} \\delta_c \\cdot x^{cons}_{ck} \\ge \\epsilon - M(1-y_k)$$\n",
+    "   Si le groupe $k$ est actif ($y_k=1$), le bilan doit être positif.\n",
+    "\n",
+    "**Objectif :**\n",
+    "Minimiser le nombre de groupes $\\sum_k y_k$ pour obtenir l'explication la plus compacte."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "e9140cbc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Comparaison u > v\n",
+      "Arguments Pour (Pros) : ['A', 'B', 'C', 'E']\n",
+      "Arguments Contre (Cons) : ['D', 'F']\n",
+      "Deltas : {'A': 8, 'B': 14, 'C': 21, 'D': -42, 'E': 72, 'F': -65, 'G': 0}\n",
+      "------------------------------\n",
+      "Explication (m-m) trouvée avec 1 groupe(s) !\n",
+      "\n",
+      "[Groupe 1]\n",
+      "  Pros : ['A', 'B', 'C', 'E'] (Somme: +115)\n",
+      "  Cons : ['D', 'F'] (Somme: -107)\n",
+      "  Bilan : +8.00\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "compare_m_m(\"u\", \"v\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "8488fbd7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Comparaison a1 > a2\n",
+      "Arguments Pour (Pros) : ['A', 'E', 'F']\n",
+      "Arguments Contre (Cons) : ['B', 'C', 'D']\n",
+      "Deltas : {'A': 144, 'B': -70, 'C': -70, 'D': -66, 'E': 36, 'F': 27.5, 'G': 0}\n",
+      "------------------------------\n",
+      "Explication (m-m) trouvée avec 1 groupe(s) !\n",
+      "\n",
+      "[Groupe 3]\n",
+      "  Pros : ['A', 'E', 'F'] (Somme: +207.5)\n",
+      "  Cons : ['B', 'C', 'D'] (Somme: -206)\n",
+      "  Bilan : +1.50\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# NOUVEAUX CANDIDATS (a1>a2)\n",
+    "notes_a1 = {'A': 89, 'B': 74, 'C': 81, 'D': 68, 'E': 84, 'F': 79, 'G': 77}\n",
+    "notes_a2 = {'A': 71, 'B': 84, 'C': 91, 'D': 79, 'E': 78, 'F': 73.5, 'G': 77}\n",
+    "\n",
+    "compare_m_m(\"a1\", \"a2\", notes_a1, notes_a2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ff0df626",
+   "metadata": {},
+   "source": [
+    "### Remarque sur l'approche (m-m)\n",
+    "\n",
+    "> [!NOTE]\n",
+    "> L'approche **(m-m)** est théoriquement la plus **générale** et la plus **puissante**, car elle permet de regrouper librement plusieurs *Pros* avec plusieurs *Cons*.\n",
+    "\n",
+    "Cependant, dans le contexte de nos exemples, cette approche **n'apporte pas de valeur explicative** supplémentaire. En effet, le modèle tend à créer un **unique groupe** contenant tous les *Pros* et tous les *Cons*, ce qui revient simplement à vérifier que :\n",
+    "\n",
+    "$$\\sum_{p \\in Pros} \\delta_p + \\sum_{c \\in Cons} \\delta_c > 0$$\n",
+    "\n",
+    "Autrement dit, on montre juste que **la somme totale des contributions est positive** — une information que l'on connaît déjà par hypothèse (puisque $x \\succ y$).\n",
+    "\n",
+    "> [!IMPORTANT]\n",
+    "> L'intérêt d'une explication de type trade-off réside dans sa **granularité** : montrer *comment* chaque désavantage est compensé, pas simplement *que* la somme globale est positive.\n",
+    "\n",
+    "Le (m-m) multi-groupes n'émerge que dans des configurations très équilibrées et contraintes\n",
+    "\n",
+    "C'est pourquoi les approches **(1-1)**, **(1-m)**, **(m-1)** et **mixte** restent plus pertinentes pour fournir des explications **compréhensibles** et **convaincantes** au décideur."
    ]
   }
  ],
