--- a/analyse_data27crit.ipynb
+++ b/analyse_data27crit.ipynb
@@ -838,6 +838,34 @@
     "    r4 = \"POSSIBLE\" if res.get('mixte') else \"IMPOSSIBLE\"\n",
     "    print(f\"{comp:<20} {r1:<12} {r2:<12} {r3:<12} {r4:<12}\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Résultats"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Tableau Récapitulatif des Explications\n",
+    "\n",
+    "| Comparaison | (1-1) | (1-m) | (m-1) | Mixte |\n",
+    "|:------------|:-----:|:-----:|:-----:|:-----:|\n",
+    "| Solution 1 vs Solution 2 | ❌ | ✅ | ❌ | ✅ |\n",
+    "| Solution 1 vs Solution 3 | ✅ | ✅ | ✅ | ✅ |\n",
+    "| Solution 1 vs Solution 4 | ❌ | ❌ | ❌ | ✅ |\n",
+    "\n",
+    "\n",
+    "> **Légende :** ✅ = Explication possible | ❌ = Explication impossible\n",
+    "\n",
+    "### Observations clés :\n",
+    "- **Solution 3** : Tous les types d'explications fonctionnent → comparaison \"facile\" à justifier\n",
+    "- **Solution 4** : Seule l'approche **Mixte** réussit → configuration plus contrainte\n",
+    "- **Solution 2** : Les approches **(1-m)** et **Mixte** fonctionnent"
+   ]
   }
  ],
  "metadata": {
